feat(device) detect new brand Chico Mobile models: Fuego Max, Alto Bombo, Alto Classic,  Alto Estrella, Alto Juego, Alto Subir, Ojos i, Ojos Nube, Ojos Oro, Ojos 6, Ojos 8, Cambio feat(device) detect brand Hurricane model: Flame Plus feat(device) detect brand Colors model: E15 feat(device) detect brand Vivax model: Fun S1 feat(device) detect brand CellAllure model: Chic X1

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15912,7 +15912,7 @@ Toshiba:
 
 # Vivax (www.vivax.com)
 Vivax:
-  regex: 'VIVAX|(?:Fly5[_ ]Lite|Fun[_ ]S500|Point_(?:X[12]|X501)|PRO3|32LE77SM|40LE77SM)(?:[);/ ]|$)'
+  regex: 'VIVAX|(?:Fly5[_ ]Lite|Fun[_ ]S500|Point_(?:X[12]|X501)|PRO3|32LE77SM|40LE77SM|FUN S1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Fly5[_ ]Lite(?:[);/ ]|$)'
@@ -15921,6 +15921,8 @@ Vivax:
       model: 'Point X$1'
     - regex: 'Fun[_ ]S500(?:[);/ ]|$)'
       model: 'Fun S500'
+    - regex: 'FUN S1(?:[);/ ]|$)'
+      model: 'Fun S1'
     - regex: 'VIVAX[ _]Fly3(?:[);/ ]|$)'
       model: 'Fly 3'
     - regex: 'VIVAX[ _]Fly[ _]V1(?:[);/ ]|$)'
@@ -19184,7 +19186,7 @@ Hezire:
 
 # Hurricane (hurricanemobile.com)
 Hurricane:
-  regex: 'Hurricane[ _]'
+  regex: 'Hurricane[ _]|(?:Flame_Plus)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Hurricane[ _]IGNITE'
@@ -19195,6 +19197,8 @@ Hurricane:
       model: 'Vortex'
     - regex: 'Hurricane[ _]GIGA'
       model: 'Giga'
+    - regex: 'Flame_Plus'
+      model: 'Flame Plus'
 
 # iSwag (iswagmobile.com)
 iSWAG:
@@ -19552,12 +19556,12 @@ Smailo:
 
 # Colors or Colors Mobile (www.colors-mobile.com)
 Colors:
-  regex: '(?:Colors[ _](S(?:[19]|11)|P70|P[46]5|P50 Plus)|Pride_1A)(?:[);/ ]|$)'
+  regex: '(?:Colors[ _](S(?:[19]|11)|P70|P[46]5|E15|P50 Plus)|Pride_1A)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Pride_1A(?:[);/ ]|$)'
       model: 'Pride 1A'
-    - regex: 'Colors[ _](S(?:[19]|11)|P70|P[46]5|P50 Plus)(?:[);/ ]|$)'
+    - regex: 'Colors[ _](S(?:[19]|11)|P70|E15|P[46]5|P50 Plus)(?:[);/ ]|$)'
       model: '$1'
 
 # Honeywell
@@ -19709,13 +19713,15 @@ VC:
 
 # CellAllure (cellallure.com)
 CellAllure:
-  regex: '(?:Cool_Extreme_2|Earn|Fashion2Plus|Fashion[ _]C|Cool Duo)(?:[);/ ]|$)'
+  regex: '(?:Cool_Extreme_2|Earn|Fashion2Plus|Fashion[ _]C|Cool Duo|CHIC_X1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(Cool_Extreme_2|Earn|Fashion[ _]C|Cool Duo)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Fashion2Plus'
       model: 'Fashion 2 Plus'
+    - regex: 'CHIC_X1'
+      model: 'Chic X1'
 
 # Eagle (eagleuhd.com)
 Eagle:
@@ -19728,6 +19734,34 @@ Invens:
  regex: '(Fighter|Eager)(?: Build|[;)])'
  device: 'smartphone'
  model: '$1'
+
+# Chico Mobile (chicomobile.ph)
+Chico Mobile:
+  regex: '(?:ALTO (?:Bombo|classic|Estrella|JUEGO|SUBIR)|FUEGO MAX|OJOS[ _](?:CAMBIO|NUBE|[68i]|ORO))(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'ALTO Bombo'
+      model: 'Alto Bombo'
+    - regex: 'ALTO classic'
+      model: 'Alto Classic'
+    - regex: 'ALTO Estrella'
+      model: 'Alto Estrella'
+    - regex: 'ALTO JUEGO'
+      model: 'Alto Juego'
+    - regex: 'ALTO SUBIR'
+      model: 'Alto Subir'
+    - regex: 'OJOS[ _]([68i])'
+      model: 'Ojos $1'
+    - regex: 'OJOS NUBE'
+      model: 'Ojos Nube'
+    - regex: 'OJOS CAMBIO'
+      model: 'Ojos Cambio'
+    - regex: 'OJOS ORO'
+      model: 'Ojos Oro'
+
+    - regex: 'FUEGO MAX'
+      device: 'tablet'
+      model: 'Fuego Max'
 
 # Leff
 Leff:
