--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3899,7 +3899,7 @@ Coolpad:
     - regex: '(?:YL-)?Coolpad[ _\-]?([a-z0-9\-]+)'
       model: '$1'
 
-# Clarmin
+# Clarmin (clarmin.com)
 Clarmin:
   regex: 'Clarmin'
   device: 'smartphone'
@@ -19777,6 +19777,11 @@ Claresta:
     - regex: 'Claresta[ _](F4)'
       model: '$1'
 
+# MIVO (mivo.com.my)
+MIVO:
+  regex: '(Caryota [1245789])'
+  device: 'smartphone'
+  model: '$1'
 
 # Leff
 Leff:
