feat(device) detect new brand EXCEED models: EX7SL4, EX7S4, EX10S4 feat(device) detect brand Sico model: Express 3 Max feat(device) detect brand CUBOT model: Zorro 001

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3986,7 +3986,7 @@ Cube:
 
 # CUBOT
 CUBOT:
-  regex: 'CUBOT|RAINBOW 2|KING_KONG_3|KINGKONG_MINI|KING KONG CS|(?<!QUMO )QUEST(?!(?:[0-9]|\s[0-9]))(?: LITE)?'
+  regex: 'CUBOT|RAINBOW 2|KING_KONG_3|ZORRO 001|KINGKONG_MINI|KING KONG CS|(?<!QUMO )QUEST(?!(?:[0-9]|\s[0-9]))(?: LITE)?'
   device: 'smartphone'
   models:
     - regex: 'CHEETAH 2'
@@ -4009,6 +4009,8 @@ CUBOT:
       model: 'Quest Lite'
     - regex: 'QUEST'
       model: 'Quest'
+    - regex: 'ZORRO 001'
+      model: 'Zorro 001'
     - regex: 'CUBOT[ _]Echo'
       model: 'Echo'
     - regex: 'CUBOT[ _]MANITO'
@@ -19517,7 +19519,7 @@ Sansui:
 
 # Sico (sico.com.eg)
 Sico:
-  regex: 'SICO[_ ](?:PLUS|e1002)'
+  regex: 'SICO[_ ](?:PLUS|e1002)|Express3-Max'
   device: 'smartphone'
   models:
     - regex: 'SICO[_ ]PLUS'
@@ -19525,6 +19527,9 @@ Sico:
     - regex: 'SICO[_ ]e1002'
       device: 'tablet'
       model: 'E1002'
+    - regex: 'Express3-Max'
+      device: 'tablet'
+      model: 'Express 3 Max'
 
 # Smadl (smadlethiopia.com)
 Smadl:
@@ -19535,6 +19540,12 @@ Smadl:
       model: 'Safari'
     - regex: 'SMADL[ _]Matri([2X])'
       model: 'Matri $1'
+
+# EXCEED (exceedmobiles.com)
+EXCEED:
+  regex: '(EX7SL?4|EX10S4)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
 
 # Tymes
 Tymes:
