feat(device) detect new brand Camfone models: Hero H5+, Hero SE2, Hero XR Plus, Hero 12, Hero 11,  Hero 13, Hero SE3 Max, Hero H7 Plus, Honey Y1, Honey Y2s feat(device) detect new brand Bellphone model: BP 100 X-Plus feat(device) detect new brand IKI Mobile models: Go 5.5", Bless Go 5.5", Bless Plus feat(device) detect brand Gome models: C7 Note, C7 (2018X07A) feat(device) detect brand iBall models: Gorgeo 4GL, Blaze V4

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6884,10 +6884,10 @@ Hyundai:
 
 # iBall
 iBall:
-  regex: 'iBall[ _]([^;/)]+)[ _]Build|(?:Snap_4G2|6351-Q400i|iT-KSA0003|iT-KSA0012|iT-KSA0066|Avid|Twinkle_i5)(?:[);/ ]|$)'
+  regex: 'iBall[ _]([^;/)]+)[ _]Build|(?:Snap_4G2|6351-Q400i|iT-KSA0003|iT-KSA0012|iT-KSA0066|Avid|Twinkle_i5|Gorgeo_4GL|Blaze_V4)(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: '(Snap_4G2|Avid|Twinkle_i5)(?:[);/ ]|$)'
+    - regex: '(Snap_4G2|Avid|Twinkle_i5|Gorgeo_4GL|Blaze_V4)(?:[);/ ]|$)'
       model: '$1'
     - regex: '6351-Q400i(?:[);/ ]|$)'
       model: 'Slide'
@@ -17683,11 +17683,13 @@ Huadoo:
 
 # Gome
 Gome:
-  regex: '(?:GOME[_ ](?:2018X38A|2017X05A|2016G68A|2017M27A|2016M25A|C7_Note_Plus|U9|S[17])|Fenmmy_Note)(?:[);/ ]|$)'
+  regex: '(?:GOME[_ ](?:201[678].+|C7_Note(?:_Plus)?|U9|S[17])|Fenmmy_Note)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'GOME[_ ](?:2018X38A)(?:[);/ ]|$)'
       model: 'C72'
+    - regex: 'GOME[_ ](?:2018X07A)(?:[);/ ]|$)'
+      model: 'C7'
     - regex: 'GOME[_ ](?:2017X05A)(?:[);/ ]|$)'
       model: 'C71'
     - regex: 'GOME[_ ](?:2016G68A)(?:[);/ ]|$)'
@@ -17696,7 +17698,7 @@ Gome:
       model: 'U1'
     - regex: 'GOME[_ ](?:2017M27A)(?:[);/ ]|$)'
       model: 'U7'
-    - regex: 'GOME[_ ](C7_Note_Plus|U9|S[17])(?:[);/ ]|$)'
+    - regex: 'GOME[_ ](C7_Note(?:_Plus)?|U9|S[17])(?:[);/ ]|$)'
       model: '$1'
     - regex: '(?:GOME[_ ])?(Fenmmy_Note)(?:[);/ ]|$)'
       device: 'phablet'
@@ -19626,6 +19628,18 @@ Pluzz:
   device: 'smartphone'
   model: '$1'
 
+# IKI Mobile (ikimobile.com)
+IKI Mobile:
+  regex: '(?:GO5_55|BLESS_GO55|BLESSPLUS)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'GO5_55'
+      model: 'Go 5.5"'
+    - regex: 'BLESS_GO55'
+      model: 'Bless Go 5.5"'
+    - regex: 'BLESSPLUS'
+      model: 'Bless Plus'
+
 # CG Mobile
 'CG Mobile':
   regex: '(?:CG_OMEGA6|Omega (?:[38]))(?:[);/ ]|$)'
@@ -19806,6 +19820,18 @@ Claresta:
       model: '$1 Pro'
     - regex: 'Claresta[ _](F4)'
       model: '$1'
+
+# Camfone (camfonemobile.com)
+Camfone:
+  regex: '(Hero[_ ](?:H5\+|SE2|H9|(?:H7|XR)_Plus|SX|1[123]|SE3[ _]Max)|Honey (?:Y1|Y2s))(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# Bellphone
+Bellphone:
+  regex: 'Bp100 X-Plus(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'BP 100 X-Plus'
 
 # MIVO (mivo.com.my)
 MIVO:
