feat(device) detect new brand Teknosa models: Preo P1, Preo P2, Preo P3 feat(device) detect brand Primux models: Kappa P501, Kappa P500, Omega 7, Zonda 4, Siroco 6

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18553,22 +18553,30 @@ Oyyu:
   device: 'tablet'
   model: 'T11 3G'
 
-# Primux
+# Primux (primux.es)
 Primux:
   regex: 'Primux'
   device: 'smartphone'
   models:
     - regex: 'PrimuxDelta6(?:[);/ ]|$)'
       model: 'Delta 6'
+    - regex: 'PrimuxKappa(P50[01])(?:[);/ ]|$)'
+      model: 'Kappa $1'
     - regex: 'PrimuxKappa(?:[);/ ]|$)'
       model: 'Kappa'
     - regex: 'Primux_Beta2(?:[);/ ]|$)'
       model: 'Beta 2'
-    - regex: 'Primux_Omega5(?:[);/ ]|$)'
-      model: 'Omega 5'
+    - regex: 'Primux_?Omega([57])(?:[);/ ]|$)'
+      model: 'Omega $1'
     - regex: 'PrimuxUP(?:[);/ ]|$)'
       device: 'tablet'
       model: 'UP'
+    - regex: ' PrimuxZonda4(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Zonda 4'
+    - regex: 'Primux_Siroco6(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Siroco 6'
 
 # iMars
 iMars:
@@ -19890,6 +19898,16 @@ Jesy:
   regex: 'Jesy_(J7)'
   device: 'smartphone'
   model: '$1'
+
+# Teknosa or Tekno S.A
+Teknosa:
+  regex: 'Preo[ _]'
+  device: 'smartphone'
+  models:
+    - regex: 'Preo Teknosa P1'
+      model: 'Preo P1'
+    - regex: 'Preo[ _]P([23])'
+      model: 'Preo P$1'
 
 # Leff
 Leff:
