feat(device) detect new brand Leader Phone model: Vyper feat(device) detect brand AMGOO model: AM412

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1764,7 +1764,7 @@ altron:
 
 # AMGOO
 AMGOO:
-  regex: 'AM(350|355|40[257]|41[05]|450|50[89]|52[037]|51[58]|53[05])'
+  regex: 'AM(350|355|40[257]|41[025]|450|50[89]|52[037]|51[58]|53[05])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'AM350'
@@ -19911,6 +19911,12 @@ EWIS:
   regex: 'OCTA T720Q(?:[);/ ]|$)'
   device: 'tablet'
   model: 'Octa T720Q'
+
+# Leader Phone or LP (lp.tn)
+Leader Phone:
+  regex: '(Vyper)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # Cavion (cavion.pl)
 Cavion:
