feat(device) detect new brand GLX model: Aria, Dorna, Taban, Shine, Spark, Asa

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19949,6 +19949,19 @@ Cavion:
       device: 'tablet'
       model: 'Base 7.0" 3G Silver'
 
+# GLX or JLX
+GLX:
+  regex: 'GLX (?:Aria|Dorna|Taban|Shine|Spark|ASA)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'GLX ASA'
+      model: 'Asa'
+    - regex: 'GLX (Aria|Taban|Shine|Spark)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'GLX (Dorna)(?:[);/ ]|$)'
+      device: 'tablet'
+      model: '$1'
+
 # Leff
 Leff:
   regex: 'Leff Shell (?:HV320WHB-N55|LC390TA2A)(?:[);/ ]|$)'
