feat(device) detect new brand Hyve models: Pryme 01, Storm ST01

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19906,6 +19906,16 @@ Teknosa:
     - regex: 'Preo[ _]P([23])'
       model: 'Preo P$1'
 
+# Hyve
+Hyve:
+  regex: '(?:Pryme 01|ST01)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Pryme 01'
+      model: 'Pryme 01'
+    - regex: 'ST01'
+      model: 'Storm ST01'
+
 # EWIS
 EWIS:
   regex: 'OCTA T720Q(?:[);/ ]|$)'
