feat(device) detect new brand Jivi models: Revolution TnT3, Xtreme Klick XT84,  Xtreme View Pro XT309Plus, Xtreme 1, Xtreme 7, Xtreme 3, Xtreme 3x feat(device) detect brand Vonino model: Xylo T feat(device) detect brand Xtouch model: A5

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15038,7 +15038,7 @@ Vodafone:
 
 # Vonino
 Vonino:
-  regex: 'Vonino|Epic (?:E8|P7)|Gyga[ _](?:X|S|QS|XS)|Jax[ _](?:QS|[SXQN]|Mini)|Magnet[ _]M[19]|Navo_QS|Onyx_(QS|Z)|Orin_QS|Pluri[ _](?:[BCMQ]7|[CQM]8)|Sirius_QS|Volt[ _][XS]|Xavy_(T7|L8)|Xylo[ _][XSPQ]|Zun[ _]X[OS]?|JAX_N'
+  regex: 'Vonino|Epic (?:E8|P7)|Gyga[ _](?:X|S|QS|XS)|Jax[ _](?:QS|[SXQN]|Mini)|Magnet[ _]M[19]|Navo_QS|Onyx_(QS|Z)|Orin_QS|Pluri[ _](?:[BCMQ]7|[CQM]8)|Sirius_QS|Volt[ _][XS]|Xavy_(T7|L8)|Xylo[ _][XSPQT]|Zun[ _]X[OS]?|JAX_N'
   device: 'smartphone'
   models:
     - regex: 'Zun[ _]XO'
@@ -15047,7 +15047,7 @@ Vonino:
       model: 'Zun XS'
     - regex: 'Zun[ _]X'
       model: 'Zun X'
-    - regex: 'Xylo[ _](P|S|X|Q)'
+    - regex: 'Xylo[ _]([PSXQT])'
       model: 'Xylo $1'
     - regex: 'Volt[ _]S_A7'
       model: 'Volt S A7'
@@ -19061,9 +19061,9 @@ Fonos:
 
 # Xtouch
 Xtouch:
-  regex: 'Xtouch X10(?:[);/ ]|$)'
+  regex: 'Xtouch[ _](X10|A5)(?:[);/ ]|$)'
   device: 'smartphone'
-  model: 'X10'
+  model: '$1'
 
 # Conquest
 Conquest:
@@ -20009,6 +20009,20 @@ Seeken:
     - regex: 'Seeken[_ -](ST-101)'
       device: 'tablet'
       model: '$1'
+
+# Jivi Mobiles (jivi.in)
+Jivi:
+  regex: '(?:Revolution TnT3|Xtreme_(?:[37]|3x)|Xtreme (?:XT84)|XT309 Plus|1)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Revolution (TnT3)'
+      model: 'Revolution $1'
+    - regex: 'Xtreme (XT84)'
+      model: 'Xtreme Klick $1'
+    - regex: 'Xtreme (XT309) Plus'
+      model: 'Xtreme View Pro $1Plus'
+    - regex: 'Xtreme[ _]([137]|3x)(?:[);/ ]|$)'
+      model: 'Xtreme $1'
 
 # Leff
 Leff:
