feat(device) detect new brand WE models: A10, A50, F10, F20, L9, R3, R4,  V4, L3, L4, L6, R3, X1, V3, B3, E2, E1, T1, X3 feat(device) detect brand Odys model: Xelio Pro 10 LTE fix: rename model Sharp Disney Mobile => Sharp Disney DM-01J

--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -4956,7 +4956,7 @@
   device:
     type: smartphone
     brand: Sharp
-    model: Disney Mobile
+    model: Disney Mobile DM-01J
   os_family: Android
   browser_family: Chrome
 -
