--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10657,9 +10657,9 @@ O2:
     - regex: 'O2-([a-z0-9]+)'
       model: '$1'
 
-# Odys
+# Odys (odys.de)
 Odys:
-  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|JuniorT8Pro|(?:NOVA|PYRO)_X?7_PLUS_3G|UNO_X8|SLADE_X55'
+  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|JuniorT8Pro|(?:NOVA|PYRO)_X?7_PLUS_3G|UNO_X8|SLADE_X55|XELIO_PRO_10_LTE'
   device: 'tablet'
   models:
     - regex: 'XELIO[_ ]A10'
@@ -10680,6 +10680,8 @@ Odys:
       model: 'Xelio 10 HD Plus 3G'
     - regex: 'XELIO_10_HD'
       model: 'Xelio 10 HD'
+    - regex: 'XELIO_PRO_10_LTE'
+      model: 'Xelio Pro 10 LTE'
     - regex: 'ELEMENT10_PLUS_3G'
       model: 'Element 10 Plus 3G'
     - regex: 'CONNECT8PLUS'
@@ -20012,7 +20014,7 @@ Seeken:
 
 # Jivi Mobiles (jivi.in)
 Jivi:
-  regex: '(?:Revolution TnT3|Xtreme_(?:[37]|3x)|Xtreme (?:XT84)|XT309 Plus|1)(?:[);/ ]|$)'
+  regex: '(?:Revolution TnT3|Xtreme_(?:[37]|3x)|Xtreme (?:XT84|XT309 Plus|1))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Revolution (TnT3)'
@@ -20023,6 +20025,12 @@ Jivi:
       model: 'Xtreme View Pro $1Plus'
     - regex: 'Xtreme[ _]([137]|3x)(?:[);/ ]|$)'
       model: 'Xtreme $1'
+
+# WE or WM Mobile or AAMRA WE
+WE:
+  regex: 'WE (A[15]0|B3|F[12]0|E[12]|L[3469]|R[34]|V[34]|S1|X[13]|T1)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # Leff
 Leff:
