Adds detection for Samsung S21 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12346,6 +12346,8 @@ Samsung:
       model: 'Galaxy S20+'
     - regex: '(?:SAMSUNG-)?SM-G986(?:[0BNUW]|U1)|SC-52A'
       model: 'Galaxy S20+ 5G'
+    - regex: '(?:SAMSUNG-)?SM-G991(?:[0BNW]|U1)'
+      model: 'Galaxy S21 5G'
     - regex: '(?:SAMSUNG-)?SM-F700(?:[0FNUW]|U1)|SCV47'
       model: 'Galaxy Z Flip'
     - regex: '(?:SAMSUNG-)?SCH-I200'
